--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,162 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <header> <!--CABECERA-->
+        <div class="contenedor">
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=, initial-scale=1.0">
     
-    <title>Mercado Liebre</title>
+            <title>Mercado Liebre</title>
+        
+              <link href="/stylesheets/style.css" rel="stylesheet">
+              <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+              <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
+          
+          <div class="logo" >
+              <img src="/images/logo-mercado-liebre.svg"  width="" alt="">
+          </div>
+          <p class="Buscador">
+            <input type="text" id="Buscar" placeholder="Buscar productos, marcas"/>
+            <i class="fas fa-search"></i>
+          </p>
     
-    <link href="/stylesheets/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
-<div class="amarillo">
-    <div class="content-box">
-    <img src="/images/logo-mercado-liebre.svg">
+    <div class="barradecuotas">
+        
+               <i class="fas fa-hand-holding-usd">Comprá en cuotas y sin tarjeta de crédito</i>
     </div>
-    <div class="content-box">
-    <input type="text" id="Buscar" placeholder="Buscar productos, marcas"/>
-    <p><i class="fas fa-search"></i></p>
-</div>
-
-</head>
-
-<body>
-  <div class="amarillo"></div>
-      <section>
-    <p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
-<div class="barradenavegacion">
-    <ul>
-    <li><a href="#">Ofertas</a></li>
-    <li><a href="#">Tiendas Oficiales</a></li>
-    <li><a href="#">Vender</a></li>
-    <li><a href="#">Ayuda</a></li>
-</ul>
-
-<ul>
-    <li><a href="#">Crea tu cuenta</a> <i class="far fa-address-card"></i></li>
-    <li><a href="#">Ingresá</a> <i class="fas fa-sign-in-alt"></i></li>
-    <li><a href="#">Mis Compras</a> <i class="fas fa-shopping-basket"></i></li>
-</ul>
-
-</section>
-
-<p class="botonmenu" ><head><i class="fas fa-bars"></head></i></p>
-</div>
-</div> 
-<div class="content-box">
-     <section>     
-<p><img class="banner" src="/images/img-home-banner.jpg"></p>
-</section>
-    </section class="principal">
-    </div>
-
-<main>
-   
-    <section>
-        <div class="content-box"><h1 class="grisclarito">Basado en tu última visita</h1></div>
     
-    <article>
-        <img src="/images/img-cafetera-moulinex.jpg">
-        <p class="verdecito"><i class="fas fa-truck"></i></p>
-        <p class="precios">$6.770</p>
-        <p class="verdecito">40% OFF</p>
-    <h2 class="subh2">Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.</h2>
-    <div class="lienzo"></div>
-    </article>
-   
-    <article>
-        <img src="/images/img-macbook-pro-2019.jpg">
-        <p class="verdecito"><i class="fas fa-truck"></i></p>
-        <p class="precios">$230.000</p>
-        <p lass="verdecito">20% OFF</p>
-        <h2 class="subh2">Macbook Pro 2019 Lorem ipsum, dolor sit amet.</h2>
-        <div class="lienzo"></div>
-    </article>
-
-    <article>
-       <img src="images/img-samsung-galaxy-s10.jpg">
-       <p class="verdecito"><i class="fas fa-truck"></i></p>
-       <p class="precios">$70.500</p>
-       <p class="verdecito">15% OFF</p>
-       <h2 class="subh2">Teléfono móvil Samsung Galaxy S10 Lorem ipsum, dolor sit amet.</h2>
-       <div class="lienzo"></div>
-    </article>
-
-
-    <arcticle><img src="/images/img-tv-samsung-smart.jpg">
-        <p class="verdecito"><i class="fas fa-truck"></i></p>
-        <p class="precios">$34.000</p>
-        <p class="verdecito">5% OFF</p>    
-        <h2 class="subh2">SmartTv Samsung 43" Lorem ipsum, dolor sit amet.</h2>
-        <div class="lienzo"></arcticle>
+        <section>
+           <nav class="barradenavegacion"> <!-- comienzo de nav-->
+         <ul>
+             <li><a href="#">Ofertas</a></li>
+             <li><a href="#">Tiendas Oficiales</a></li>
+             <li><a href="#">Vender</a></li>
+             <li><a href="#">Ayuda</a></li>
+         </ul>
+    
+         <ul>
+             <li><a href="#">Crea tu cuenta</a> <i class="far fa-address-card"></i></li>
+             <li><a href="#">Ingresá</a> <i class="fas fa-sign-in-alt"></i></li>
+             <li><a href="#">Mis Compras</a> <i class="fas fa-shopping-basket"></i></li>
+         </ul>
+           </nav><!--finde nav-->
+        <div class="botonmenu">
+               <head><i class= "fas fa-bars "></head></i>
+        </div>
+        </header> <!--FIN DE CABECERA-->
+<body> <!--BODY-->
+    <section class="bannerseccion">
+   <p><img class="banner" src="/images/img-home-banner.jpg"></p>
     </section>
-
+<br>
+    <main class="seccionprincipal">
+     
     <section>
-        <div class="content-box"><h1 class="ofertas">Ofertas</h1></div>
-    <article>
-        <img src="/images/img-cafetera-moulinex.jpg">
-        <p class="verdecito"><i class="fas fa-truck"></i></p>
+       
+        <div class ="contenedor2">
+        <h1 class="Titular1">Basado en tu última visita</h1></div> 
+        
+    <article class="article2">
+        <img class ="img" src="/images/img-cafetera-moulinex.jpg">
+        <span class="cajaarcticle">
+        <p class="icono"><i class="fas fa-truck"></i></p>
         <p class="precios">$6.770</p>
-        <p class="verdecito">40% OFF</p>
-        <h2 class="subh2">Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet</h2>
-        <div class="lienzo"></div>
+        <p class="Descuentos">40% OFF</p>
+        <h2 class="Descripciones">Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet.</h2>
+    </span>
     </article>
 
-    <article>
-        <img src="/images/img-macbook-pro-2019.jpg">
-        <p class="verdecito"><i class="fas fa-truck"></i></p>
+    <article class="article2">
+        <img class ="img" src="/images/img-macbook-pro-2019.jpg">
+        <p class="icono"><i class="fas fa-truck"></i></p>
         <p class="precios">$230.000</p>
-        <p class="verdecito">20% OFF</p>
-        <h2 class="subh2">Macbook Pro 2019 Lorem ipsum, dolor sit amet.</h2>
-        <div class="lienzo"></div>
+        <p class="Descuentos">20% OFF</p>
+        <h2 class="Descripciones">Macbook Pro 2019 Lorem ipsum, dolor sit amet.</h2>
+       
     </article>
 
-    <article>
-        <img src="/images/img-samsung-galaxy-s10.jpg">
-        <p class="verdecito"><i class="fas fa-truck"></i></p>
+    <article class="article2">
+       <img class ="img" src="images/img-samsung-galaxy-s10.jpg">
+       <p class="icono"><i class="fas fa-truck"></i></p>
+       <p class="precios">$70.500</p>
+       <p class="Descuentos">15% OFF</p>
+       <h2 class="Descripciones">Teléfono móvil Samsung Galaxy S10 Lorem ipsum, dolor sit amet.</h2>
+    </article>
+
+    <article class="article2">
+        <img class ="img" src="/images/img-tv-samsung-smart.jpg">
+        <p class="icono"><i class="fas fa-truck"></i></p>
+        <p class="precios">$34.000</p>
+        <p class="Descuentos">5% OFF</p>    
+        <h2 class="Descripciones"> SmartTv Samsung 43" Lorem ipsum, dolor sit amet.</h2>
+    </article>
+
+    </section>
+<br>
+    <section>
+        <div class="content-box"><h1 class="Titular2">Ofertas</h1></div>
+    <article class="article2">
+        <img class ="img" src="/images/img-cafetera-moulinex.jpg">
+        <p class="icono"><i class="fas fa-truck"></i></p>
+        <p class="precios">$6.770</p>
+        <p class="Descuentos">40% OFF</p>
+        <h2 class="Descripciones">Cafetera Moulinex Dolce Gusto Lorem ipsum, dolor sit amet</h2>
+    </article>
+
+    <article class="article2">
+        <img class ="img" src="/images/img-macbook-pro-2019.jpg">
+        <p class="icono"><i class="fas fa-truck"></i></p>
+        <p class="precios">$230.000</p>
+        <p class="Descuentos">20% OFF</p>
+        <h2 class="Descripciones">Macbook Pro 2019 Lorem ipsum, dolor sit amet.</h2>
+    </article>
+
+    <article class="article2">
+        <img class ="img" src="/images/img-samsung-galaxy-s10.jpg">
+        <p class="icono"><i class="fas fa-truck"></i></p>
         <p class="precios">$70.500</p>
-        <p class="verdecito">15% OFF</p>
-        <h2 class="subh2">Teléfono móvil Samsung Galaxy S10 Lorem ipsum, dolor sit amet.</h2>
-        <div class="lienzo"></div>
+        <p class="Descuentos">15% OFF</p>
+        <h2 class="Descripciones">Teléfono móvil Samsung Galaxy S10 Lorem ipsum, dolor sit amet.</h2>
     </article>
 
-    <article>
-   <img src="/images/img-tv-samsung-smart.jpg">
-   <p class="verdecito"><i class="fas fa-truck"></i></p>
-   <p class="precios"> $34.000</p>
-   <p class="verdecito">5% OFF</p>
-   <h2 class="subh2">SmartTv Samsung 43" Lorem ipsum, dolor sit amet</h2>
+    <article class="article2">
+        <img class ="img" src="/images/img-tv-samsung-smart.jpg">
+        <p class="icono"><i class="fas fa-truck"></i></p>
+        <p class="precios"> $34.000</p>
+        <p class="Descuentos">5% OFF</p>
+        <h2 class="Descripciones">SmartTv Samsung 43" Lorem ipsum, dolor sit amet</h2>
     </article>
-
-</section>
 
 </main>
 
-</body>
-
-<footer>
-
-<p class="azul"><i class="fas fa-credit-card"></i></p>
-
+</section>
+</body> <!--FIN DE BODY-->
+<main class="contenedorpiedepagina">
+<footer>  <!-- FOOTER-->
 <article class="piedepagina">
+    <p class="azul"><i class="fas fa-credit-card"></i></p>
 
-    <h2>Pagá con tarjeta o en efectivo</h2>
+    <h3>Pagá con tarjeta o en efectivo</h3>
     <p>Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o efectivoen puntos de pago. ¡Y siempre es seguro!</p>
+    
+</article>
+
+<article class="piedepaginamedio">
     <p class="azul"><i class="fas fa-gift"></i></p>
-
-</article>
-
-<article class="piedepagina">
-
-    <h2>Envío gratis desde los $ 2.500</h2>
+    <h3>Envío gratis desde los $ 2.500</h3>
     <p>Solo por estar registrad@ en MercadoLiebre tenés envíos gratis en miles de productos. Es un beneficio de MercadoPuntos.</p>
-    <p class="azul"><i class="fas fa-user-shield"></i></p>
-
+  
 </article>
 
 <article class="piedepagina">
-
-   <h2>Seguridad, de principio a fin</h2>
+    <p class="azul"><i class="fas fa-user-shield"></i></p>
+   <h3>Seguridad, de principio a fin</h3>
    <p>¿No te gusta? ¡Devolvelo! En MercadoLiebre no hay nada que no puedas hacer porque estás siempre prtegid@</p>
 
 </article>
@@ -164,7 +157,8 @@
     <div>
         Copyright © 1999-2019 MercadoLiebre S.R.L.
     </div>
+</main>
+</footer> <!-- FIN DE FOOTER-->
 
-</footer>
-
+</div> <!--div final de contenedor-->
 </html>
