--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,97 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=, initial-scale=1.0">
+    <header> <!--CABECERA-->
+        <div class="contenedor">
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=, initial-scale=1.0">
+    
+            <title>Mercado Liebre</title>
         
-        <title>Mercado Liebre</title>
+              <link href="/stylesheets/style.css" rel="stylesheet">
+              <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+              <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
+          
+          <div class="logo" >
+              <img src="/images/logo-mercado-liebre.svg"  width="" alt="">
+          </div>
+          <p class="Buscador">
+            <input type="text" id="Buscar" placeholder="Buscar productos, marcas"/>
+            <i class="fas fa-search"></i>
+          </p>
+    
+    <div class="barradecuotas">
         
-        <link href="/stylesheets/style.css" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
-    <div class="amarillo">
-        <div class="content-box">
-        <img src="/images/logo-mercado-liebre.svg">
-    </div>
-
-        <div class="content-box">
-        <input type="text" id="Buscar" placeholder="Buscar productos, marcas"/>
-        <p><i class="fas fa-search"></i></p>
+               <i class="fas fa-hand-holding-usd">Comprá en cuotas y sin tarjeta de crédito</i>
     </div>
     
-    </head>
-<body>
-
-<div class="amarillo"></div>
+        <section>
+           <nav class="barradenavegacion"> <!-- comienzo de nav-->
+         <ul>
+             <li><a href="#">Ofertas</a></li>
+             <li><a href="#">Tiendas Oficiales</a></li>
+             <li><a href="#">Vender</a></li>
+             <li><a href="#">Ayuda</a></li>
+         </ul>
     
-    <p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
-<ul>
-    <li><a href="#">Ofertas</a></li>
-    <li><a href="#">Tiendas Oficiales</a></li>
-    <li><a href="#">Vender</a></li>
-    <li><a href="#">Ayuda</a></li>
-</ul>
-
-<ul>
-    <li><a href="#">Crea tu cuenta</a> <i class="far fa-address-card"></i></li>
-    <li><a href="#">Ingresá</a> <i class="fas fa-sign-in-alt"></i></li>
-    <li><a href="#">Mis Compras</a> <i class="fas fa-shopping-basket"></i></li>
-</ul>
-</div>
-
-<main>
-
-   
-<section>
+         <ul>
+             <li><a href="#">Crea tu cuenta</a> <i class="far fa-address-card"></i></li>
+             <li><a href="#">Ingresá</a> <i class="fas fa-sign-in-alt"></i></li>
+             <li><a href="#">Mis Compras</a> <i class="fas fa-shopping-basket"></i></li>
+         </ul>
+           </nav><!--finde nav-->
+        <div class="botonmenu">
+               <head><i class= "fas fa-bars "></head></i>
+        </div>
+        </header> <!--FIN DE CABECERA-->
+<body> <!--BODY-->
+    <section>
+   <p><img class="banner" src="/images/img-home-banner.jpg"></p>
+    </section>
+<br>
+<main class="login">
     
-<form action="index.html" method="post">
-
-    <p class="input"><label for="nombre">Nombre de usuari@</label></p>
-    <p class="content-boxlogin"><input type="text" name="nombre" id="nombre"></p>
-
-    <p class="input"><label for="password">Contraseña</label></p>
-    <p class="content-boxlogin"><input type="password" id="password" name="password">
-   
-     <p><button class="enviar"><a class="botonenviar" href="http://localhost:3000/Home">Enviar</a></button></p>
-</form>
-
-</section>
-</div>
+    <form action="index.html" method="get">
+    
+        <p class="inputlogin"><label for="nombre"></label></p>
+        <p class="inputlogin"><input type="text" name="nombre" id="nombre" placeholder="Nombre de usuari@"></p>
+    
+        <p class="inputlogin"><label for="password"></label></p>
+        <p class="inputlogin"><input type="password" id="password" name="password" placeholder="Contraseña"></p>
+       
+         <button class="enviar" type=”submit”>Enviar</button>
+    
+    </form>
+    
 </main>
 
-</body>
+</body> <!--FIN DE BODY-->
 
-<footer>
-
+<footer>  <!-- FOOTER-->
+<article class="piedepagina">
     <p class="azul"><i class="fas fa-credit-card"></i></p>
-    
-    <article class="piedepagina">
-    
-        <h2>Pagá con tarjeta o en efectivo</h2>
-        <p>Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o efectivoen puntos de pago. ¡Y siempre es seguro!</p>
-        <p class="azul"><i class="fas fa-gift"></i></p>
-    
-    </article>
-    
-    <article class="piedepagina">
-    
-        <h2>Envío gratis desde los $ 2.500</h2>
-        <p>Solo por estar registrad@ en MercadoLiebre tenés envíos gratis en miles de productos. Es un beneficio de MercadoPuntos.</p>
-        <p class="azul"><i class="fas fa-user-shield"></i></p>
-    
-    </article>
-    
-    <article class="piedepagina">
-    
-       <h2>Seguridad, de principio a fin</h2>
-       <p>¿No te gusta? ¡Devolvelo! En MercadoLiebre no hay nada que no puedas hacer porque estás siempre prtegid@</p>
-    
-    </article>
-    
-        <div>
-            Copyright © 1999-2019 MercadoLiebre S.R.L.
-        </div>
-    
-    </footer>
 
+    <h3>Pagá con tarjeta o en efectivo</h3>
+    <p>Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o efectivoen puntos de pago. ¡Y siempre es seguro!</p>
+    
+</article>
+
+<article class="piedepagina">
+    <p class="azul"><i class="fas fa-gift"></i></p>
+    <h3>Envío gratis desde los $ 2.500</h3>
+    <p>Solo por estar registrad@ en MercadoLiebre tenés envíos gratis en miles de productos. Es un beneficio de MercadoPuntos.</p>
+  
+</article>
+
+<article class="piedepagina">
+    <p class="azul"><i class="fas fa-user-shield"></i></p>
+   <h3>Seguridad, de principio a fin</h3>
+   <p>¿No te gusta? ¡Devolvelo! En MercadoLiebre no hay nada que no puedas hacer porque estás siempre prtegid@</p>
+
+</article>
+
+    <div>
+        Copyright © 1999-2019 MercadoLiebre S.R.L.
+    </div>
+
+</footer> <!-- FIN DE FOOTER-->
+
+</div> <!--div final de contenedor-->
 </html>
