--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,162 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <header> <!--CABECERA-->
+        <div class="contenedor">
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=, initial-scale=1.0">
     
-    <title>Mercado Liebre</title>
+            <title>Mercado Liebre</title>
+        
+              <link href="/stylesheets/style.css" rel="stylesheet">
+              <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+              <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
+          
+          <div class="logo" >
+              <img src="/images/logo-mercado-liebre.svg"  width="" alt="">
+          </div>
+          <p class="Buscador">
+            <input type="text" id="Buscar" placeholder="Buscar productos, marcas"/>
+            <i class="fas fa-search"></i>
+          </p>
     
-    <link href="/stylesheets/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap">
-<div class="amarillo">
-    <div class="content-box">
-    <img src="/images/logo-mercado-liebre.svg">
+    <div class="barradecuotas">
+        
+               <i class="fas fa-hand-holding-usd">Comprá en cuotas y sin tarjeta de crédito</i>
     </div>
-    <div class="content-box">
-    <input type="text" id="Buscar" placeholder="Buscar productos, marcas"/>
-    <p><i class="fas fa-search"></i></p>
-</div>
-
-</head>
-<body>
-    <div class="flex-container"></div>
-<div class="amarillo">
-      
-    <p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
-<ul>
-    <li><a href="#">Ofertas</a></li>
-    <li><a href="#">Tiendas Oficiales</a></li>
-    <li><a href="#">Vender</a></li>
-    <li><a href="#">Ayuda</a></li>
-</ul>
-
-<ul>
-    <li><a href="#">Crea tu cuenta</a> <i class="far fa-address-card"></i></li>
-    <li><a href="#">Ingresá</a> <i class="fas fa-sign-in-alt"></i></li>
-    <li><a href="#">Mis Compras</a> <i class="fas fa-shopping-basket"></i></li>
-</ul>
-</div>
-</div>
-<main> 
-<section>
-  <form action="index.html" method="post">
-    <div class="content-box">
-    <p>
-        <label for="nombre"> Nombre y apellido: </label>
-        <input type="text" name="nombre" id="nombre">
-    </p>
-    <p>
-        <label for="nombredeusuario"> Nombre de usuari@ </label>
-        <input type="text" name="nombredeusuario" id="nombredeusuario">
-    </p>
-   
-    <p><label for="email"> Email </label></p>
-    <p><input type="email" id="email" name="email"></p>
-   
-</div>
-</section>    
-
-<section>
-<h3>Fecha de Nacimiento</h3>
-<div class="content-box">
-
-    <p>
-        <label for="Fecha de nacimiento">Fecha de nacimiento: </label>
-        <input type="date" name="fecha">
-    </p>
-</div>
-</section>
-
-<section>
-<h3>Perfil del usuario</h3>
-
-<div class="content-box">
-  <p>
-    <label for="">Comprador</label>
-    <input type="radio" name="Perfil del usuario">
-    <label for="">Vendedor</label>
-    <input type="radio" name="Perfil del usuario">
-  </p>
-</div>
-</section>
-
-<section>
-<h3>Intereses</h3>
-
-
-<div class="content-box">
-
-     <label for ="Hobbies">Electro</label>
-     <input type="checkbox" name="Hobbies" value="Electro">
     
-     <label for ="Hobbies">Moda</label>
-     <input type="checkbox" name="Hobbies" value="Moda">
-
-     <label for ="Hobbies">Hogar</label>
-     <input type="checkbox" name="Hobbies" value="Hogar">
-
-     <label for ="Hobbies">Juguetería</label>
-     <input type="checkbox" name="Hobbies" value="Juguetería">
-
-     <label for ="Hobbies">Vida sana</label>
-     <input  type="checkbox" name="Hobbies" value="Vida sana">
-
-    </div>
-</section>
-
-<section>
-
-<h3>Elegí tu foto de usuario</h3>
-   
-<div class="content-box">
-       <p><label for="password">Elegí tu contraseña</label></p>
-    <p class="content-box"><input type="password" id="password" name="password"></p>
-    <p class="content-box"><label for="password">Confirmar contraseña</label></p>
-    <p class="content-box"><input type="password" id="password" name="password"></p>
-    <button><a href="http://localhost:3000/Home">Enviar</a></button>
-    <input class="botonborrar" type="reset" value="Borrar">
-</div>
-</form>
-
-
-</section>
-</main>
-</body>
-
-<footer>
-
-    <p class="azul"><i class="fas fa-credit-card"></i></p>
+        <section>
+           <nav class="barradenavegacion"> <!-- comienzo de nav-->
+         <ul>
+             <li><a href="#">Ofertas</a></li>
+             <li><a href="#">Tiendas Oficiales</a></li>
+             <li><a href="#">Vender</a></li>
+             <li><a href="#">Ayuda</a></li>
+         </ul>
     
-    <article class="piedepagina">
-    
-        <h2>Pagá con tarjeta o en efectivo</h2>
-        <p>Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o efectivoen puntos de pago. ¡Y siempre es seguro!</p>
-        <p class="azul"><i class="fas fa-gift"></i></p>
-    
-    </article>
-    
-    <article class="piedepagina">
-    
-        <h2>Envío gratis desde los $ 2.500</h2>
-        <p>Solo por estar registrad@ en MercadoLiebre tenés envíos gratis en miles de productos. Es un beneficio de MercadoPuntos.</p>
-        <p class="azul"><i class="fas fa-user-shield"></i></p>
-    
-    </article>
-    
-    <article class="piedepagina">
-    
-       <h2>Seguridad, de principio a fin</h2>
-       <p>¿No te gusta? ¡Devolvelo! En MercadoLiebre no hay nada que no puedas hacer porque estás siempre prtegid@</p>
-    
-    </article>
-    
-        <div>
-            Copyright © 1999-2019 MercadoLiebre S.R.L.
+         <ul>
+             <li><a href="#">Crea tu cuenta</a> <i class="far fa-address-card"></i></li>
+             <li><a href="#">Ingresá</a> <i class="fas fa-sign-in-alt"></i></li>
+             <li><a href="#">Mis Compras</a> <i class="fas fa-shopping-basket"></i></li>
+         </ul>
+           </nav><!--finde nav-->
+        <div class="botonmenu">
+               <head><i class= "fas fa-bars "></head></i>
         </div>
+        </header> <!--FIN DE CABECERA-->
+
+<body> <!--BODY-->
+
+    <section>
+            <p><img class="banner" src="/images/img-home-banner.jpg"></p>
+    </section>
+   <main class="contenedorregister">
+     <section>
+        <form action="index.html" method="post">
+          <div class="content-box">
+          <p><label for="nombre"></label></p>
+          <p><input type="text" name="nombre" id="nombre" placeholder="Nombre y apellido:"></p>
+          <p><label for="nombredeusuario"></label></p>
+          <p><input type="text" name="nombredeusuario" id="nombredeusuario" placeholder="Nombre de usuari@"></p>
+         
+          <p><label for="email"></label></p>
+          <p><input type="email" id="email" name="email" placeholder="Email"></p>
+         
+      </div>
+      </section>    
+      
+      <section>
+      <h3>Fecha de Nacimiento</h3>
+      <div class="content-box">
+          <p><label for="Fecha de nacimiento">Fecha de nacimiento: </label></p>
+          <p><input type="date" name="fecha"></p>
+      </div>
+      </section>
+      
+      <section class="contenedorregister">
+      <h3>Perfil del usuario</h3>
+      
+      <div class="content-box">
+          <p><label for="">Comprador</label>
+          <input type="radio" name="Perfil del usuario"> 
+          <label for="">Vendedor</label> 
+          <input type="radio" name="Perfil del usuario">
+          </p>
+      </div>
+      </section>
+      
+      <section>
+      <h3>Intereses</h3>
+      
+      
+      <div class="content-boxintereses">
+      
+           <p><label for ="Hobbies">Electro</label></p>
+           <p><input type="checkbox" name="Hobbies" value="Electro"></p>
+          
+           <p><label for ="Hobbies">Moda</label></p>
+           <p><input type="checkbox" name="Hobbies" value="Moda"></p>
+      
+           <p><label for ="Hobbies">Hogar</label>
+           <p><input type="checkbox" name="Hobbies" value="Hogar"></p>
+      
+           <p><label for ="Hobbies">Juguetería</label></p>
+           <p><input type="checkbox" name="Hobbies" value="Juguetería"></p>
+      
+           <p><label for ="Hobbies">Vida sana</label></p>
+           <p><input  type="checkbox" name="Hobbies" value="Vida sana"></p>
+      
+          </div>
+      </section>
+      
+      <section>
+      
+      <h3>Elegí tu foto de usuario</h3>
+         
+      <div class="content-box">
+             <p><label for="password"></label></p>
+          <p class="content-box"><input type="password" id="password" name="password" placeholder="Elegí tu contraseña"></p>
+          <p class="content-box"><label for="password"></label></p>
+          <p class="content-box"><input type="password" id="password" name="password" placeholder="Confirmar contraseña"></p>
+          
+          <p><a href="http://localhost:3000/Home"><button class="enviar">Enviar</button></a></p>
+          <button class="botonborrar"><input type="reset" value="Borrar"></button>
+
+      </div>
+      </form>
+      </section>
+    </main>
+</body> <!--FIN DE BODY-->
+
+<footer>  <!-- FOOTER-->
+    <article class="piedepagina">
+    <p class="azul"><i class="fas fa-credit-card"></i></p>
+
+    <h3>Pagá con tarjeta o en efectivo</h3>
+    <p>Con MercadoLiebreCash tenés cuotas sin interés con tarjeta o efectivoen puntos de pago. ¡Y siempre es seguro!</p>
     
-    </footer>
 
+</article>
 
-</div>
+<article class="piedepagina">
+    <p class="azul"><i class="fas fa-gift"></i></p>
+    <h3>Envío gratis desde los $ 2.500</h3>
+    <p>Solo por estar registrad@ en MercadoLiebre tenés envíos gratis en miles de productos. Es un beneficio de MercadoPuntos.</p>
+  
+
+</article>
+
+<article class="piedepagina">
+    <p class="azul"><i class="fas fa-user-shield"></i></p>
+   <h3>Seguridad, de principio a fin</h3>
+   <p>¿No te gusta? ¡Devolvelo! En MercadoLiebre no hay nada que no puedas hacer porque estás siempre prtegid@</p>
+
+</article>
+
+    <div>
+        Copyright © 1999-2019 MercadoLiebre S.R.L.
+    </div>
+
+</footer> <!-- FIN DE FOOTER-->
+
+</div> <!--div final de contenedor-->
 </html>
